// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BouncingDots > snapshots > matches props snapshot 1`] = `
<div>
  <div
    class="sc-FEMpB kisnfQ aje-bouncing-dots custom-class is-small"
    style="color: red;"
  >
    <span
      class="sc-gjcoXW jDAVOB aje-bouncing-dots__dot"
    />
    <span
      class="sc-gjcoXW cDkKfS aje-bouncing-dots__dot"
    />
    <span
      class="sc-gjcoXW gjANQY aje-bouncing-dots__dot"
    />
    <span
      class="sc-gjcoXW fXkSdv aje-bouncing-dots__dot"
    />
    <span
      class="sc-gjcoXW eIFvQr aje-bouncing-dots__dot"
    />
  </div>
</div>
`;

exports[`BouncingDots > snapshots > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-FEMpB GHmAc aje-bouncing-dots is-medium"
  >
    <span
      class="sc-gjcoXW jDAVOB aje-bouncing-dots__dot"
    />
    <span
      class="sc-gjcoXW cDkKfS aje-bouncing-dots__dot"
    />
    <span
      class="sc-gjcoXW gjANQY aje-bouncing-dots__dot"
    />
  </div>
</DocumentFragment>
`;
